# vision-demo

./: .gitignore  README.md  frame_receiver.py  inference_worker.py  main.py  requirements.txt  ui.qml  utils.py
camera_module/: CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
camera_module/extra/: FlyCapture2Test.cpp  main_old.cpp  test.cpp
gui_module/: README.md  frame_receiver.py  inference_worker.py  main.py  requirements.txt  ui.qml  utils.py
gui_module/models/: identity.onnx
models/: coco8.yaml
network_module/: README.md
tools/: create_idenitity.py
vision_module/: README.md
